--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta property="og:title" content="Slackの楽しみ方">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="http://me.pocke.me/slide-slack/">
+    <meta property="og:image" content="http://me.pocke.me/slide-slack/ogp-image.png">
 
 		<title>Slackの楽しみ方</title>
 
